# dotman

./: Cargo.toml  README.md  build.rs
src/: commands.rs  config.rs  error.rs  main.rs
src/commands/: links.rs
