[package]
name = "dotman"
version = "0.1.0"
description = "A dotfiles manager"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["cargo", "derive", "env"] }
colored = "3.0.0"
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
simple-expand-tilde = "0.5.0"
thiserror = "2.0.12"
